--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ myapp/tmp/cache/persistent/*
 myapp/tmp/sessions/*
 myapp/tmp/tests/*
 myapp/tmp/logs/*
+myapp/tmp/cache/cake_toolbar_cache
+myapp/webroot/php_errors.log
